tentando aprender css

--- a/html/main.html
+++ b/html/main.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/css/main.css" />
     <title>Main</title>
 </head>
 <body>
     <header>
-        <h1><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/main.html">InfoSports</a></h1>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/login.html">Login</a></h3>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/register.html">Cadastro</a></h3>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/contact.html">Contato</a></h3>
+        <h1><a class="logo" href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/main.html">InfoSports</a></h1>
+        <h3><a class="navBtn" href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/login.html">Login</a></h3>
+        <h3><a class="navBtn" href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/register.html">Cadastro</a></h3>
+        <h3><a class="navBtn" href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/contact.html">Contato</a></h3>
     </header>
-    <h2>BEM VINDO A INFOSPORTS!</h2>
-    <p>Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
+    <h2 class="titulo">BEM VINDO A INFOSPORTS!</h2>
+    <p class="des">Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
     <br>
     <a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/esportes/boxe.html">BOXE</h1>
         <img src="C:\Users\Aluno\Documents\Thiago.S 2\HTML\Projeto\imagens\boxe.jpg">
