--- a/html/contact.html
+++ b/html/contact.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <header>
-        <h1><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/index.html">InfoSports</a></h1>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/login.html">Login</a></h3>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/register.html">Cadastro</a></h3>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/contact.html">Contato</a></h3>
+        <h1><a href="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/index.html">InfoSports</a></h1>
+        <h3><a href="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/html/login.html">Login</a></h3>
+        <h3><a href="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/html/register.html">Cadastro</a></h3>
+        <h3><a href="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/html/contact.html">Contato</a></h3>
     </header>
     <h1>Contate-nos<br>
         <div>
