--- a/html/esportes/corrida.html
+++ b/html/esportes/corrida.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <header>
-        <h1><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/index.html">InfoSports</a></h1>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/login.html">Login</a></h3>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/register.html">Cadastro</a></h3>
-        <h3><a href="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/html/contact.html">Contato</a></h3>
+        <h1><a href="Projeto/index.html">InfoSports</a></h1>
+        <h3><a href="html/login.html">Login</a></h3>
+        <h3><a href="html/register.html">Cadastro</a></h3>
+        <h3><a href="html/contact.html">Contato</a></h3>
     </header>
     <h2>BEM VINDO A INFOSPORTS!</h2>
     <p>Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
     <br>
     <p style="border: 2px solid black">
-        <img src="file:///C:/Users/Aluno/Documents/Thiago.S%202/HTML/Projeto/imagens/corrida.jpeg">
+        <img src=Projeto/imagens/corrida.jpeg">
         <br>
         <h1>CORRIDA</h1>
         <p>A corrida é uma atividade física de movimento
