--- a/index.html
+++ b/index.html
@@ -4,54 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/css/main.css" />
-    <link rel="stylesheet" href="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/a.php" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="index.php" />
     <title>Main</title>
 </head>
 <body>
     <header class="header">
-        <h1><a class="logo" href="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/index.html">InfoSports</a></h1>
+        <h1><a class="logo" href="index.html">InfoSports</a></h1>
         <div class="headerBtnGroup">
-        <h3><a class="navBtn" href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/login.html">Login</a></h3>
-        <h3><a class="navBtn" href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/register.html">Cadastro</a></h3>
-        <h3><a class="navBtn" href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/contact.html">Contato</a></h3>
+        <h3><a class="navBtn" href="html/login.html">Login</a></h3>
+        <h3><a class="navBtn" href="register.html">Cadastro</a></h3>
+        <h3><a class="navBtn" href="contact.html">Contato</a></h3>
         </div>
     </header>
     <h2 class="titulo" id="BackToTop">BEM VINDO A INFOSPORTS!</h2>
     <p class="des">Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
     <br>
-    <a href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/esportes/boxe.html">BOXE</h1>
-        <img src="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/imagens/boxe.jpg">
+    <a href="html/esportes/boxe.html">BOXE</h1>
+        <img src="imagens/boxe.jpg">
         <p>Descubra a força interior e a técnica impecável necessáriaspara se
             destacar no ringue. Desafie-se a superar seus
             limites físicos e mentais enquanto aprende os segredos deste esporte de combate emocionante.</p>
     <br>
-    <a href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/esportes/crossfit.html">CROSSFIT</h1>
-        <img src="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/imagens/crossfit.jpg">
+    <a href="html/esportes/crossfit.html">CROSSFIT</h1>
+        <img src="imagens/crossfit.jpg">
         <p>Entre na arena do crossfit e desafie seu corpo em um treinamento
             intenso e variado que irá transformar sua força,
             resistência e condicionamento físico. Supere seus limites e alcance novos patamares de desempenho.</p>
     <br>
-    <a href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/esportes/tenis.html">TENIS</h1>
-        <img src="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/imagens/tenis.jpg">
+    <a href="html/esportes/tenis.html">TENIS</h1>
+        <img src="imagens/tenis.jpg">
         <p>Experimente a elegância e a velocidade do tênis, um esporte que
             combina habilidade, estratégia e agilidade. Jogue com
             paixão, vença com classe e desfrute da competição saudável em quadra.</p>
         <br>
-    <a href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/esportes/neve.html">ESPORTES NA NEVE</h1>
-        <img src="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/imagens/neve.jpg">
+    <a href="html/esportes/neve.html">ESPORTES NA NEVE</h1>
+        <img src="imagens/neve.jpg">
         <p>Sinta a adrenalina das montanhas cobertas de neve enquanto desliza
             pelas encostas em esportes como esqui e snowboard.
             Prepare-se para a emoção de voar sobre a neve e dominar as pistas.</p>
         <br>
-    <a href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/esportes/basquete.html">BASQUETE</h1>
-        <img src="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/imagens/basquete.jpg">
+    <a href="html/esportes/basquete.html">BASQUETE</h1>
+        <img src="imagens/basquete.jpg">
         <p>Drible, passe, arremesse! Junte-se ao emocionante mundo do basquete e
             experimente a empolgação de jogar em equipe,
             competir em partidas acirradas e fazer cestas incríveis.</p>
         <br>
-    <a href="file:///C:/Users/Aluno/Documents/ThiagoS//HTML/Projeto/html/esportes/corrida.html">CORRIDA</h1>
-        <img src="file:///C:/Users/Aluno/Documents/ThiagoS/HTML/Projeto/imagens/corrida.jpeg">
+    <a href="html/esportes/corrida.html">CORRIDA</h1>
+        <img src="imagens/corrida.jpeg">
         <p>Calce seus tênis e sinta a energia pulsante das corridas. Desafie-se
             em diferentes distâncias, supere obstáculos e
             descubra os benefícios incríveis para a saúde e o bem-estar que a corrida proporciona.</p>
