--- a/html/esportes/neve.html
+++ b/html/esportes/neve.html
@@ -7,16 +7,16 @@
 </head>
 <body>
     <header>
-        <h1><a href="Projeto/index.html">InfoSports</a></h1>
-        <h3><a href="html/login.html">Login</a></h3>
-        <h3><a href="html/register.html">Cadastro</a></h3>
-        <h3><a href="html/contact.html">Contato</a></h3>
+        <h1><a href="../../../Projeto/index.html">InfoSports</a></h1>
+        <h3><a href="../../html/login.html">Login</a></h3>
+        <h3><a href="../../html/register.html">Cadastro</a></h3>
+        <h3><a href="../../html/contact.html">Contato</a></h3>
     </header>
     <h2>BEM VINDO A INFOSPORTS!</h2>
     <p>Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
     <br>
     <p style="border: 2px solid black">
-        <img src="Projeto/imagens/neve.jpg">
+        <img src="../../../imagens/neve.jpg">
         <br>
         <h1>ESPORTES NA NEVE</h1>
         <p>Os esportes na neve incluem uma variedade de
