--- a/html/login.html
+++ b/html/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html">InfoSports</a></h1>
+        <h1><a href="../../Projeto/index.html">InfoSports</a></h1>
         <h3><a href="login.html">Login</a></h3>
         <h3><a href="register.html">Cadastro</a></h3>
         <h3><a href="contact.html">Contato</a></h3>
