--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1><a class="logo" href="index.html">InfoSports</a></h1>
         <div class="headerBtnGroup">
         <h3><a class="navBtn" href="html/login.html">Login</a></h3>
-        <h3><a class="navBtn" href="register.html">Cadastro</a></h3>
-        <h3><a class="navBtn" href="contact.html">Contato</a></h3>
+        <h3><a class="navBtn" href="html/register.html">Cadastro</a></h3>
+        <h3><a class="navBtn" href="html/contact.html">Contato</a></h3>
         </div>
     </header>
     <h2 class="titulo" id="BackToTop">BEM VINDO A INFOSPORTS!</h2>
