--- a/index.html
+++ b/index.html
@@ -1,60 +1,150 @@
+
 <!DOCTYPE html>
-<html><!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="index.php" />
-    <title>Main</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/temaescuro.css">
+  <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=4Nfuak3IyVUgB5qCzbtlsQFyfvRm1k_t0PitVbCOXHjFbIqcp0S2rbAFJ17aEl1lnHaqA1LuiHmO5okdpHVcNk9OtZbv5uMvyOjN37EOkl7UT-pImPsVKiT2r9nhQZa4" charset="UTF-8"></script><script src="javascript/header.js" defer></script>
+  <title>InfoSports</title>
 </head>
+
 <body>
+  <div class="container">
     <header class="header">
-        <h1><a class="logo" href="index.html">InfoSports</a></h1>
-        <div class="headerBtnGroup">
-        <h3><a class="navBtn" href="html/login.html">Login</a></h3>
-        <h3><a class="navBtn" href="html/register.html">Cadastro</a></h3>
-        <h3><a class="navBtn" href="html/contact.html">Contato</a></h3>
+      <a class='logo' href='/'>InfoSports</a>
+      <div class="headerBtnGroup">
+        <button class="navBtn"><a href='html/login.html'>Login</a></button>
+        <button class="navBtn"><a href='html/registro.html'>Registro</a></button>
+        <button class="navBtn"><a href='html/contato.html'>Contato</a></button>
+        <div>
+          <input type="checkbox" class="check" id="chk"/>
+
+          <label class="label" for="chk">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="bola"></div>
+          </label>
         </div>
+      </div>
+      <div class="hamburguer-menu">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
     </header>
-    <h2 class="titulo" id="BackToTop">BEM VINDO A INFOSPORTS!</h2>
-    <p class="des">Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte preferido.</p>
-    <br>
-    <a href="html/esportes/boxe.html">BOXE</h1>
-        <img src="imagens/boxe.jpg">
-        <p>Descubra a força interior e a técnica impecável necessáriaspara se
-            destacar no ringue. Desafie-se a superar seus
-            limites físicos e mentais enquanto aprende os segredos deste esporte de combate emocionante.</p>
-    <br>
-    <a href="html/esportes/crossfit.html">CROSSFIT</h1>
-        <img src="imagens/crossfit.jpg">
-        <p>Entre na arena do crossfit e desafie seu corpo em um treinamento
-            intenso e variado que irá transformar sua força,
-            resistência e condicionamento físico. Supere seus limites e alcance novos patamares de desempenho.</p>
-    <br>
-    <a href="html/esportes/tenis.html">TENIS</h1>
-        <img src="imagens/tenis.jpg">
-        <p>Experimente a elegância e a velocidade do tênis, um esporte que
-            combina habilidade, estratégia e agilidade. Jogue com
-            paixão, vença com classe e desfrute da competição saudável em quadra.</p>
-        <br>
-    <a href="html/esportes/neve.html">ESPORTES NA NEVE</h1>
-        <img src="imagens/neve.jpg">
-        <p>Sinta a adrenalina das montanhas cobertas de neve enquanto desliza
-            pelas encostas em esportes como esqui e snowboard.
-            Prepare-se para a emoção de voar sobre a neve e dominar as pistas.</p>
-        <br>
-    <a href="html/esportes/basquete.html">BASQUETE</h1>
-        <img src="imagens/basquete.jpg">
-        <p>Drible, passe, arremesse! Junte-se ao emocionante mundo do basquete e
-            experimente a empolgação de jogar em equipe,
-            competir em partidas acirradas e fazer cestas incríveis.</p>
-        <br>
-    <a href="html/esportes/corrida.html">CORRIDA</h1>
-        <img src="imagens/corrida.jpeg">
-        <p>Calce seus tênis e sinta a energia pulsante das corridas. Desafie-se
-            em diferentes distâncias, supere obstáculos e
-            descubra os benefícios incríveis para a saúde e o bem-estar que a corrida proporciona.</p>
-        <br>
+    <p class="sectionTitle" id="backToTop">BEM VINDO A INFOSPORTS!</p>
+    <p class="sectionDescription">Aqui é onde você encontra todos os itens mais novos e modernos do seu esporte
+      preferido.</p>
+    <section class="gridContainer">
+      <div class="mainContent">
+        <a class='pag-link' href='html/esportes/boxe.html'>
+          <div class="categoryCard">
+            <img src="imagens/boxe.jpg" alt="mainCardImg" class="mainCardImg" width=320px height=180px>
+            <p class="mainCategoryCardTitle">BOXE</p>
+            <p class="mainCategoryCardDescription">Descubra a força interior e a técnica impecável necessáriaspara se
+              destacar no ringue. Desafie-se a superar seus
+              limites físicos e mentais enquanto aprende os segredos deste esporte de combate emocionante.</p>
+          </div>
+        </a>
+        <a class='pag-link' href='html/esportes/crossfit.html'>
+          <div class="categoryCard">
+            <img src="imagens/crossfit.jpg" alt="mainCardImg" class="mainCardImg" width=320px height=180px>
+            <p class="mainCategoryCardTitle">CROSSFIT</p>
+            <p class="mainCategoryCardDescription">Entre na arena do crossfit e desafie seu corpo em um treinamento
+              intenso e variado que irá transformar sua força,
+              resistência e condicionamento físico. Supere seus limites e alcance novos patamares de desempenho.</p>
+          </div>
+        </a>
+
+
+        <a class='pag-link' href='html/esportes/esportesnaneve.html'>
+          <div class="categoryCard">
+            <img src="imagens/esportesNaNeve.jpg" alt="mainCardImg" class="mainCardImg" width=320px height=180px>
+            <p class="mainCategoryCardTitle">ESPORTES NA NEVE</p>
+            <p class="mainCategoryCardDescription">Sinta a adrenalina das montanhas cobertas de neve enquanto desliza
+              pelas encostas em esportes como esqui e snowboard.
+              Prepare-se para a emoção de voar sobre a neve e dominar as pistas.</p>
+          </div>
+        </a>
+
+        <a class='pag-link' href='html/esportes/basquete.html'>
+          <div class="categoryCard">
+            <img src="imagens/basquete.jpg" alt="mainCardImg" class="mainCardImg" width=320px height=180px>
+            <p class="mainCategoryCardTitle">BASQUETE</p>
+            <p class="mainCategoryCardDescription">Drible, passe, arremesse! Junte-se ao emocionante mundo do basquete e
+              experimente a empolgação de jogar em equipe,
+              competir em partidas acirradas e fazer cestas incríveis.</p>
+          </div>
+        </a>
+
+        <a class='pag-link' href='html/esportes/corrida.html'>
+          <div class="categoryCard">
+            <img src="imagens/corrida.jpg" alt="mainCardImg" class="mainCardImg" width=320px height=180px>
+            <p class="mainCategoryCardTitle">CORRIDA</p>
+            <p class="mainCategoryCardDescription">Calce seus tênis e sinta a energia pulsante das corridas. Desafie-se
+              em diferentes distâncias, supere obstáculos e
+              descubra os benefícios incríveis para a saúde e o bem-estar que a corrida proporciona.</p>
+          </div>
+        </a>
+
+        <a class='pag-link' href='html/esportes/surf.html'>
+          <div class="categoryCard">
+            <img src="imagens/surf.jpg" alt="mainCardImg" class="mainCardImg" width=320px height=180px>
+            <p class="mainCategoryCardTitle">SURF</p>
+            <p class="mainCategoryCardDescription">Sinta a liberdade e a conexão com o mar enquanto desliza pelas ondas
+              no surf. Experimente a emoção de pegar a onda
+              perfeita, domine as técnicas e mergulhe no estilo de vida descontraído e vibrante do surf.</p>
+          </div>
+        </a>
+
+        <a class='pag-link' href='html/esportes/trilha.html'>
+          <div class="categoryCard">
+            <img src="imagens/trilha.jpg" alt="mainCardImg" class="mainCardImg" width=320px height=180px>
+            <p class="mainCategoryCardTitle">TRILHA</p>
+            <p class="mainCategoryCardDescription">Aventure-se pelos caminhos menos percorridos e descubra a beleza da
+              natureza enquanto se desafia em trilhas
+              emocionantes. Deixe a rotina para trás e explore novos horizontes ao ar livre.</p>
+          </div>
+        </a>
+
+        <a class='pag-link' href='html/esportes/tenis.html'>
+          <div class="categoryCard">
+            <img src="imagens/tenis.jpg" alt="mainCardImg" class="mainCardImg" width=320px height=180px>
+            <p class="mainCategoryCardTitle">TÊNIS</p>
+            <p class="mainCategoryCardDescription">Experimente a elegância e a velocidade do tênis, um esporte que
+              combina habilidade, estratégia e agilidade. Jogue com
+              paixão, vença com classe e desfrute da competição saudável em quadra.</p>
+          </div>
+        </a>
+
+      </div>
+      <aside class="sidebar">
+        <div class="sidebarContent">
+          <div class="IMC">
+            <p>INDICE DE MASSA CORPORAL (IMC)</p>
+            <label for="#peso">Peso (KG)</label>
+            <input id="peso" type="text" placeholder="Digite o peso...">
+            <label for="#altura">Altura (M)</label>
+            <input id="altura" type="text" placeholder="Digite a altura...">
+            <button class="btnCalcular">Calcular</button>
+      </aside>
+
+    </section>
+
+    <footer class="footer">
+      <span>Info Sports</span>
+      <a href="#backToTop" class="footerAnchor">VOLTAR PARA O TOPO</a>
+    </footer>
+  </div>
+  <script src="javascript/imc.js"></script>
+  <script src="javascript/temaescuro.js"></script>
+  <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
