--- a/html/esportes/trilha.html
+++ b/html/esportes/trilha.html
@@ -19,9 +19,9 @@
         <header class="header">
             <a class='logo' href='/'>InfoSports</a>
             <div class="headerBtnGroup">
-                <button class="navBtn"><a href='/login'>Login</a></button>
-                <button class="navBtn"><a href='/registro'>Registro</a></button>
-                <button class="navBtn"><a href='/contato'>Contato</a></button>
+                <button class="navBtn"><a href='../login.html'>Login</a></button>
+                <button class="navBtn"><a href='../registro.html'>Registro</a></button>
+                <button class="navBtn"><a href='../contato.html'>Contato</a></button>
                 <div>
                     <input type="checkbox" class="check" id="chk" />
                 
