--- a/html/esportes/boxe.html
+++ b/html/esportes/boxe.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <a class='logo' href='/'>InfoSports</a>
+            <a class='logo' href='../../index.html'>InfoSports</a>
             <div class="headerBtnGroup">
                 <button class="navBtn"><a href='../login.html'>Login</a></button>
                 <button class="navBtn"><a href='../registro.html'>Registro</a></button>
