--- a/html/esportes/crossfit.html
+++ b/html/esportes/crossfit.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/paginas.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/temaescuro.css">
+    <link rel="stylesheet" href="../../css/paginas.css">
+    <link rel="stylesheet" href="../../css/header.css">
+    <link rel="stylesheet" href="../../css/footer.css">
+    <link rel="stylesheet" href="../../css/temaescuro.css">
     <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=OYMAmtnhqogPtSTJEDgy3XZvCNPW8YPLxMqHeo5aA4n6lDi8WqqLjGi_Ge0i0Jrh3hHAJNmYDC07c-HuDZ03zbiSvW4-NjA2-1pSjQuMv0rnr0G1nchNcZyHYHKSInM0WWk02dt6coSkUvzHo7yleQ" charset="UTF-8"></script><script src="scripts/header.js" defer></script>
     <title>Crossfit</title>
 </head>
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <a class='logo' href='/'>InfoSports</a>
+            <a class='logo' href='../../index.html'>InfoSports</a>
             <div class="headerBtnGroup">
                 <button class="navBtn"><a href='../login.html'>Login</a></button>
                 <button class="navBtn"><a href='../registro.html'>Registro</a></button>
