--- a/html/esportes/trilha.html
+++ b/html/esportes/trilha.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/paginas.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/temaescuro.css">
+    <link rel="stylesheet" href="../../css/paginas.css">
+    <link rel="stylesheet" href="../../css/header.css">
+    <link rel="stylesheet" href="../../css/footer.css">
+    <link rel="stylesheet" href="../../css/temaescuro.css">
     <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=Ov0UwoZHyfdv137E-71218Bzrf7vfWjDQLk2TCpRWviuyKCD5gQJBKfMbIQpSZv0qg2mczjVwX2TiHFCPqY0fKFSM1o5l01EoOvQkHYYlQLl6i1T8hr0gpRt-Tbior1jQsOnYq9usWP1z-Bg2iGR0w" charset="UTF-8"></script><script src="scripts/header.js" defer></script>
     <title>Trilha</title>
 </head>
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <a class='logo' href='/'>InfoSports</a>
+            <a class='logo' href='../../index.html'>InfoSports</a>
             <div class="headerBtnGroup">
                 <button class="navBtn"><a href='../login.html'>Login</a></button>
                 <button class="navBtn"><a href='../registro.html'>Registro</a></button>
