--- a/html/esportes/basquete.html
+++ b/html/esportes/basquete.html
@@ -44,7 +44,7 @@
         <section class="gridContainer">
             <div class="mainContent">
                 <div class="categoryCard">
-                    <img src="imagens/basquete.jpg" alt="mainCardImg" class="mainCardImg">
+                    <img src="../../imagens/basquete.jpg" alt="mainCardImg" class="mainCardImg">
                     <h1 class="mainCategoryCardTitle">Basquete</h1>
                     <p class="mainCategoryCardDescription" Align="justify">O basquete é um esporte de equipe dinâmico e
                         emocionante, jogado entre duas equipes de cinco jogadores cada, que buscam
