--- a/html/esportes/corrida.html
+++ b/html/esportes/corrida.html
@@ -44,7 +44,7 @@
         <section class="gridContainer">
             <div class="mainContent">
                 <div class="categoryCard">
-                    <img src="imagens/corrida.jpg" alt="mainCardImg" class="mainCardImg">
+                    <img src="../../imagens/corrida.jpg" alt="mainCardImg" class="mainCardImg">
                     <h1 class="mainCategoryCardTitle">Corrida</h1>
                     <p class="mainCategoryCardDescription" Align="justify">A corrida é uma atividade física de movimento
                         rápido realizada pelos seres humanos há milhares de anos. No contexto
