--- a/html/esportes/crossfit.html
+++ b/html/esportes/crossfit.html
@@ -44,7 +44,7 @@
         <section class="gridContainer">
             <div class="mainContent">
                 <div class="categoryCard">
-                    <img src="imagens/crossfit.jpg" alt="mainCardImg" class="mainCardImg">
+                    <img src="../../imagens/crossfit.jpg" alt="mainCardImg" class="mainCardImg">
                     <h1 class="mainCategoryCardTitle">Crossfit</h1>
                     <p class="mainCategoryCardDescription" Align="justify">O CrossFit é uma modalidade de treinamento
                         físico que se destaca pela sua abordagem variada e intensa, visando o
