--- a/html/esportes/surf.html
+++ b/html/esportes/surf.html
@@ -44,7 +44,7 @@
         <section class="gridContainer">
             <div class="mainContent">
                 <div class="categoryCard">
-                    <img src="imagens/surf.jpg" alt="mainCardImg" class="mainCardImg">
+                    <img src="../../imagens/surf.jpg" alt="mainCardImg" class="mainCardImg">
                     <h1 class="mainCategoryCardTitle">Surf</h1>
                     <p class="mainCategoryCardDescription" Align="justify">O surf é um esporte aquático praticado em
                         pranchas de surf, onde os surfistas deslizam sobre as ondas do mar,
