--- a/html/esportes/tenis.html
+++ b/html/esportes/tenis.html
@@ -44,7 +44,7 @@
         <section class="gridContainer">
             <div class="mainContent">
                 <div class="categoryCard">
-                    <img src="imagens/tenis.jpg" alt="mainCardImg" class="mainCardImg">
+                    <img src="../../imagens/tenis.jpg" alt="mainCardImg" class="mainCardImg">
                     <h1 class="mainCategoryCardTitle">Tênis</h1>
                     <p class="mainCategoryCardDescription" Align="justify">O tênis é um esporte praticado
                         individualmente ou em duplas, onde os jogadores utilizam raquetes para rebater uma bola
