--- a/html/contato.html
+++ b/html/contato.html
@@ -20,7 +20,7 @@
 <body>
     <div class="body-bg">
         <header class="header">
-            <a class='logo' href='/'>InfoSports</a>
+            <a class='logo' href='../index.html'>InfoSports</a>
             <div class="headerBtnGroup">
                 <button class="navBtn"><a href='login.html'>Login</a></button>
                 <button class="navBtn"><a href='registro.html'>Registro</a></button>
