--- a/html/esportes/esportesnaneve.html
+++ b/html/esportes/esportesnaneve.html
@@ -44,7 +44,7 @@
         <section class="gridContainer">
             <div class="mainContent">
                 <div class="categoryCard">
-                    <img src="imagens/esportesNaNeve.jpg" alt="mainCardImg" class="mainCardImg">
+                    <img src="../../imagens/esportesNaNeve.jpg" alt="mainCardImg" class="mainCardImg">
                     <h1 class="mainCategoryCardTitle">Esportes na Neve</h1>
                     <p class="mainCategoryCardDescription" Align="justify">Os esportes na neve incluem uma variedade de
                         atividades praticadas em ambientes gelados, como montanhas cobertas de
