--- a/html/esportes/trilha.html
+++ b/html/esportes/trilha.html
@@ -44,7 +44,7 @@
         <section class="gridContainer">
             <div class="mainContent">
                 <div class="categoryCard">
-                    <img src="imagens/trilha.jpg" alt="mainCardImg" class="mainCardImg">
+                    <img src="../../imagens/trilha.jpg" alt="mainCardImg" class="mainCardImg">
                     <h1 class="mainCategoryCardTitle">Trilha</h1>
                     <p class="mainCategoryCardDescription" Align="justify">A trilha, também conhecida como hiking ou
                         trekking, é uma atividade ao ar livre que envolve caminhar em trilhas
